# dolang

./: .gitignore  .rumdl.toml  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  dodo.dol  justfile  mkdocs.yml
dolang-bytecode/: ARCHITECTURE.md  Cargo.toml
dolang-bytecode/src/: file.rs  lib.rs  varint.rs  verify.rs
dolang-compile/: ARCHITECTURE.md  Cargo.toml
dolang-compile/src/: constant.rs  diag.rs  elab.rs  emit.rs  flow.rs  lex.rs  lib.rs  lower.rs  origin.rs  parse.rs  sig.rs  source.rs  sym.rs
dolang-compile/src/ast/: dot.rs  mod.rs  visit.rs
dolang-compile/src/cfg/: dot.rs  mod.rs
dolang-ext-base64/: Cargo.toml
dolang-ext-base64/src/: base64.rs  extension.rs  lib.rs
dolang-ext-base64/tests/: regression.rs
dolang-ext-base64/tests/regression/: basic.dol
dolang-ext-compile/: Cargo.toml
dolang-ext-compile/src/: compile.rs  extension.rs  lib.rs  render.rs
dolang-ext-compile/tests/: regression.rs
dolang-ext-compile/tests/regression/: compile_script.dol  structured_error.dol  structured_success.dol  structured_warning.dol
dolang-ext-diagnostic/: Cargo.toml
dolang-ext-diagnostic/src/: diagnostic.rs  extension.rs  lib.rs
dolang-ext-diagnostic/tests/: regression.rs
dolang-ext-diagnostic/tests/regression/: compile_render.dol  error_render.dol
dolang-ext-digest/: Cargo.toml  build.rs
dolang-ext-digest/src/: digest.rs  extension.rs  lib.rs
dolang-ext-digest/tests/: .dolang-lsp.dol  .dolang-lsp.toml  regression.rs
dolang-ext-digest/tests/regression/: basic.dol
dolang-ext-glob/: Cargo.toml
dolang-ext-glob/src/: extension.rs  glob.rs  global.rs  lib.rs
dolang-ext-glob/tests/: regression.rs
dolang-ext-glob/tests/regression/: basic.dol
dolang-ext-http/: ARCHITECTURE.md  Cargo.toml
dolang-ext-http/src/: extension.rs  global.rs  http.rs  lib.rs  sse.rs
dolang-ext-http/tests/: .dolang-lsp.dol  .dolang-lsp.toml  regression.rs
dolang-ext-http/tests/regression/: basic.dol  cookies.dol  date_headers.dol  error_types.dol  multipart.dol  sse.dol  status_errors.dol  streaming_request.dol  url_object.dol  url_request_type_error.dol
dolang-ext-json/: Cargo.toml
dolang-ext-json/src/: extension.rs  json.rs  lib.rs
dolang-ext-json/tests/: regression.rs
dolang-ext-json/tests/regression/: basic.dol
dolang-ext-load/: Cargo.toml
dolang-ext-load/src/: extension.rs  global.rs  lib.rs  load.rs
dolang-ext-load/tests/: regression.rs
dolang-ext-load/tests/mod/: existing_module.dol
dolang-ext-load/tests/regression/: import_handler_basic.dol  import_handler_fallback.dol  import_handler_non_import_error.dol  import_handler_unregister.dol  run_bytecode.dol
dolang-ext-patch/: Cargo.toml
dolang-ext-patch/src/: extension.rs  global.rs  lib.rs  patch.rs
dolang-ext-progress/: Cargo.toml
dolang-ext-progress/src/: extension.rs  global.rs  lib.rs  progress.rs  style.rs
dolang-ext-rand/: Cargo.toml
dolang-ext-rand/src/: extension.rs  lib.rs  rand.rs
dolang-ext-rand/tests/: regression.rs
dolang-ext-rand/tests/regression/: basic.dol
dolang-ext-regex/: Cargo.toml
dolang-ext-regex/src/: extension.rs  global.rs  lib.rs  regex.rs
dolang-ext-regex/tests/: regression.rs
dolang-ext-regex/tests/regression/: basic.dol  replace.dol  split.dol
dolang-ext-shell/: ARCHITECTURE.md  Cargo.toml
dolang-ext-shell/dolib/: .dolang-lsp.dol  .dolang-lsp.toml
dolang-ext-shell/src/: container.rs  diagnostic.rs  env.rs  error.rs  error_code.rs  extension.rs  global.rs  lib.rs  local.rs  pipe_channel.rs  platform.rs  proc.rs  program.rs  security.rs  shell.rs  shlex.rs  syntax.rs  sys.rs  term.rs  time.rs  util.rs
dolang-ext-shell/src/error_code/: generated.rs
dolang-ext-shell/src/fs/: attrs.rs  file.rs  file_lock.rs  fs_metadata.rs  glob.rs  metadata.rs  mod.rs  path.rs  readdir.rs  stream.rs  xattr.rs
dolang-ext-shell/src/pipe_channel/: mod.rs  unix.rs  windows.rs
dolang-ext-shell/tests/: .dolang-lsp.dol  .dolang-lsp.toml  regression.rs
dolang-ext-shell/tests/mod/: agent.dol  polyfill.dol  util.dol
dolang-ext-shell/tests/regression/: agent.dol  cat.dol  channel_mode.dol  echo.dol  env.dol  error_types.dol  grep.dol  host_function_comprehensive.dol  pipe_torture.dol  pipeline.dol  proc_run_path.dol  sys.dol  time_datetime.dol  time_sleep.dol  time_timeout.dol
dolang-ext-sqlite/: ARCHITECTURE.md  Cargo.toml
dolang-ext-sqlite/src/: extension.rs  global.rs  lib.rs  vfs.rs
dolang-ext-sqlite/src/sqlite/: connection.rs  mod.rs  row.rs  statement.rs
dolang-ext-sqlite/tests/: .dolang-lsp.dol  regression.rs
dolang-ext-tar/: Cargo.toml
dolang-ext-tar/src/: extension.rs  global.rs  lib.rs  tar.rs
dolang-ext-toml/: Cargo.toml
dolang-ext-toml/src/: extension.rs  lib.rs  toml.rs
dolang-ext-toml/tests/: .dolang-lsp.dol  regression.rs
dolang-ext-url/: ARCHITECTURE.md  Cargo.toml
dolang-ext-url/src/: extension.rs  global.rs  lib.rs  url.rs
dolang-ext-url/tests/: regression.rs
dolang-ext-xml/: Cargo.toml
dolang-ext-xml/src/: extension.rs  global.rs  lib.rs  node.rs  xml.rs
dolang-ext-xml/tests/: regression.rs
dolang-ext-yaml/: Cargo.toml
dolang-ext-yaml/src/: extension.rs  lib.rs  yaml.rs
dolang-ext-yaml/tests/: .dolang-lsp.toml  regression.rs
dolang-ext-zip/: Cargo.toml
dolang-ext-zip/src/: extension.rs  global.rs  lib.rs  zip.rs
dolang-ext-zip/tests/: .dolang-lsp.dol  regression.rs
dolang-lsp/: ARCHITECTURE.md  Cargo.toml
dolang-lsp/src/: backend.rs  main.rs  vm.rs
dolang-private-build/: Cargo.toml
dolang-private-build/src/: lib.rs
dolang-private-bundle/: Cargo.toml
dolang-private-bundle/src/: lib.rs
dolang-private-doc/: Cargo.toml
dolang-private-doc/src/: main.rs
dolang-private-highlight/: Cargo.toml
dolang-private-highlight/src/: main.rs
dolang-private-ipc/: Cargo.toml  README.md
dolang-private-ipc/src/: bootstrap.rs  lib.rs  panic.rs  raw_channel.rs  serde.rs  typed_channel.rs
dolang-private-ipc/tests/: test_bootstrap.rs  test_raw_channel.rs  test_typed_channel.rs
dolang-private-regression/: Cargo.toml
dolang-private-regression/tests/: .dolang-lsp.dol  .dolang-lsp.toml  regression.rs
(+797 files in other folders)
