[package]
name = "dolang-ext-base64"
version = "0.1.0"
description = "Base64 extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
base64 = "0.22.1"

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"
