[package]
name = "dolang-ext-compile"
version = "0.1.0"
description = "Runtime compilation extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
dolang = { path = "../dolang", version = "0.1.0" }
