[package]
name = "dolang-ext-compile"
version = "0.1.1"
description = "Runtime compilation extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[features]
default = []
diagnostic-rendering = ["dep:annotate-snippets", "dep:console"]

[dependencies]
dolang = { path = "../dolang", version = "0.1.1" }
annotate-snippets = { version = "0.12.10", optional = true }
console = { version = "0.16.2", optional = true }
