[package]
name = "dolang-ext-diagnostic"
version = "0.1.0"
description = "Diagnostic rendering extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
annotate-snippets = "0.12.10"
anstyle = "1.0.14"
console = "0.16.2"
dolang = { path = "../dolang", version = "0.1.0" }
dolang-ext-compile = { path = "../dolang-ext-compile", version = "0.1.0" }

[build-dependencies]
dolang-private-build = { path = "../dolang-private-build", version = "0.1.0" }

[dev-dependencies]
dolang-ext-compile = { path = "../dolang-ext-compile", version = "0.1.0" }
dolang-private-test = { path = "../dolang-private-test", version = "0.1.0" }
futures = "0.3"
