[package]
name = "dolang-ext-digest"
version = "0.1.0"
description = "Digest and hashing extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
blake3 = "1.8.2"
digest = "0.11.2"
md-5 = "0.11.0"
sha1 = "0.11.0"
sha2 = "0.11.0"

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"
