[package]
name = "dolang-ext-glob"
version = "0.1.1"
description = "Glob matching extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
wax = "0.7"

[dependencies.dolang]
path = "../dolang"
version = "0.1.1"
