[package]
name = "dolang-ext-json"
version = "0.1.1"
description = "JSON extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
serde = "1.0.228"
serde_json = "1"

[dependencies.dolang]
path = "../dolang"
version = "0.1.1"
