[package]
name = "dolang-ext-load"
version = "0.1.0"
description = "Dynamic module loading extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
dolang = { path = "../dolang", version = "0.1.0" }
anstyle = "1.0.14"
console = "0.16.2"
