[package]
name = "dolang-ext-progress"
version = "0.1.0"
description = "Progress reporting extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
indicatif = "0.18"
tokio = { version = "1", features = ["io-util"] }

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"

[dependencies.dolang-ext-shell]
path = "../dolang-ext-shell"
version = "0.1.0"

[build-dependencies]
dolang-private-build = { path = "../dolang-private-build", version = "0.1.0" }

[dev-dependencies]
dolang-private-test = { path = "../dolang-private-test", version = "0.1.0" }
futures = "0.3"
