[package]
name = "dolang-ext-rand"
version = "0.1.0"
description = "Random number extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rand = "0.10"

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"

[build-dependencies]
dolang-private-build = { path = "../dolang-private-build", version = "0.1.0" }

[dev-dependencies]
dolang-private-test = { path = "../dolang-private-test", version = "0.1.0" }
futures = "0.3"
