[package]
name = "dolang-ext-rand"
version = "0.1.0"
description = "Random number extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
rand = "0.10"

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"
