[package]
name = "dolang-ext-regex"
version = "0.1.0"
description = "Regular expression extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
regex = "1.11"

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"
