[package]
name = "dolang-ext-shell"
version = "0.1.0"
description = "Shell, process, and filesystem extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[features]
default = []
debug = ["dolang/debug"]

[dependencies]
linkme = "0.3.35"
futures = "0.3.31"
rand = "0.10"
bstr = "1.12.1"
typed-path.workspace = true
shlex = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
anstyle = "1.0.14"
console = "0.16.2"

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "fs", "process", "io-util", "sync", "io-std", "time"]

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"

[dependencies.dolang-ext-compile]
path = "../dolang-ext-compile"
version = "0.1.0"
features = ["diagnostic-rendering"]

[dependencies.dolang-shell-vfs]
path = "../dolang-shell-vfs"
version = "0.1.0"

[target.'cfg(unix)'.dependencies.nix]
version = "0.31"
features = ["dir", "fs", "signal", "term", "user"]

[target.'cfg(unix)'.dependencies.libc]
version = "0.2"

[target.'cfg(windows)'.dependencies.dunce]
version = "1"
