[package]
name = "dolang-ext-sqlite"
version = "0.1.0"
description = "SQLite extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["fs"] }
libsqlite3-sys = { version = "0.38", features = ["bundled-windows"] }
tokio = { version = "1.48", features = ["rt", "time"] }

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"

[dependencies.dolang-ext-shell]
path = "../dolang-ext-shell"
version = "0.1.0"

[target.'cfg(unix)'.dependencies]
sqlite-plugin= "0.10"

[target.'cfg(unix)'.dependencies.dolang-shell-vfs]
path = "../dolang-shell-vfs"
version = "0.1.0"
