[package]
name = "dolang-ext-url"
version = "0.1.1"
description = "URL extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
percent-encoding = "2.3"
url = "2"

[dependencies.dolang]
path = "../dolang"
version = "0.1.1"
