[package]
name = "dolang-ext-yaml"
version = "0.1.0"
description = "YAML extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ordered-float = "5.0"
saphyr = "0.0.6"
saphyr-parser = "0.0.6"

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"
