[package]
name = "dolang-ext-zip"
version = "0.1.0"
description = "ZIP archive extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { version = "1.48", features = ["fs", "io-util", "rt"] }

[dependencies.zip]
version = "8"
default-features = false
features = ["deflate", "zstd", "time"]

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"

[dependencies.dolang-ext-shell]
path = "../dolang-ext-shell"
version = "0.1.0"
