[package]
name = "dolang-ext-zip"
version = "0.1.1"
description = "ZIP archive extension for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
futures-lite = { version = "2.6", default-features = false, features = ["std"] }
tokio = { version = "1.48", features = ["fs", "io-util", "rt"] }
tokio-util = { version = "0.7", features = ["compat"] }

[dependencies.async_zip]
package = "astral_async_zip"
version = "0.0.20"
default-features = false
features = ["deflate", "jiff", "tokio", "zstd"]

[dependencies.jiff]
version = "0.2"

[dependencies.dolang]
path = "../dolang"
version = "0.1.1"

[dependencies.dolang-ext-shell]
path = "../dolang-ext-shell"
version = "0.1.1"

[dependencies.dolang-shell-vfs]
path = "../dolang-shell-vfs"
version = "0.1.1"
