[package]
name = "dolang-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
backtrace = "0.3"
blake3 = "1.8.2"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "io-std", "time"]

[dependencies.tower-lsp]
version = "0.20.0"

[dependencies.dolang-compile]
path = "../dolang-compile"
version = "0.1.0"

[dependencies.dolang-runtime]
path = "../dolang-runtime"
version = "0.1.0"

[dev-dependencies]
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
tower = "0.4"
