[package]
name = "dolang-lsp"
version = "0.1.1"
description = "Language Server Protocol implementation for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
backtrace = "0.3"
dirs = "6.0.0"
env_logger = "0.11.8"
log = "0.4.28"
toml = { version = "1", features = ["parse"] }

[dependencies.tokio]
version = "1.48.0"
features = ["macros", "rt", "rt-multi-thread", "io-std", "time"]

[dependencies.tower-lsp-server]
version = "0.23.0"

[dependencies.dolang-compile]
path = "../dolang-compile"
version = "0.1.1"

[dev-dependencies]
futures = "0.3"
serde = "1.0"
serde_json = "1.0"
tower = "0.5"
