[package]
name = "dolang-private-bundle"
version = "0.1.0"
description = "Build script helpers for bundling Do bytecode resources."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
test = false
doctest = false

[dependencies]
dolang = { path = "../dolang", version = "0.1.0" }
dolang-ext-shell = { path = "../dolang-ext-shell", version = "0.1.0" }

[features]
debug = ["dolang/debug"]
