[package]
name = "dolang-private-doc"
version = "0.1.0"
description = "Internal documentation generator for Do language crates."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde_json = "1.0.149"

[dependencies.dolang]
path = "../dolang"
version = "0.1.0"

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[[bin]]
name = "dolang-doc"
path = "src/main.rs"
