[package]
name = "dolang-private-highlight"
version = "0.1.0"
description = "Syntax highlighting generator for the Do language."
edition = "2024"
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
serde_json = "1.0.149"

[dependencies.dolang]
path = "../dolang"
version = "0.1.1"

[dependencies.clap]
version = "4.5.53"
features = ["derive"]

[[bin]]
name = "dolang-highlight"
path = "src/main.rs"
test = false
