[package]
name = "dolang-private-ipc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "A minimal abstraction for IPC via unix sockets."
homepage = "https://github.com/mitsuhiko/tokio-unix-ipc"
keywords = ["ipc", "unix-socket", "subprocess"]
readme = "README.md"
autoexamples = true
autotests = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "tokio_unix_ipc"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["serde", "bootstrap", "panic-support"]
serde = ["serde_", "postcard"]
serde-structural = ["serde", "rmp-serde"]
bootstrap = ["serde", "rand"]
panic-support = ["serde"]

[dependencies]
libc = "0.2.67"
nix = { version = "0.31.2", features = ["socket", "uio", "user", "process"] }
tokio = { version = "1.8.2", features = ["net", "sync"] }
serde_ = { package = "serde", version = "1.0.104", features = ["derive"], optional = true }
postcard = { version = "1.1.3", features = ["use-std"], optional = true }
rand = { version = "0.10.0", optional = true }
rmp-serde = { version = "1.1.0", optional = true }
backtrace = { version = "0.3.43", optional = true, features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.8.2", features = ["macros", "rt", "rt-multi-thread", "process"] }

# [[example]]
# name = "hello"
# required-features = ["serde", "bootstrap"]

[[test]]
name = "test_bootstrap"
required-features = ["bootstrap"]

[[test]]
name = "test_typed_channel"
required-features = ["serde"]
